# slm_api_v1

./: .env.example  .env.test  .gitignore  .pylintrc  Makefile  README.md  alembic.ini  docker-compose.yml  logging.yaml  main.py  pyproject.toml  requirements.txt  student_details - Sheet1.csv
.github/workflows/: ci.yaml  cicd.yaml
app/api/endpoints/: api.py  auth_users_old.py.bak  guardians.py  logs.py  outpass.py
app/controllers/: __init__.py  auth.py  base.py  guardian.py  outpass.py
app/core/: access_control.py  config.py  exceptions.py  jwt.py  middleware.py  password.py
app/core/logging/: __init__.py  requests.py  sqlalchemy.py
app/crud/: __init__.py  auth_user.py  base.py  guardian.py  outpass.py  verification_code.py
app/database/: base.py  engine.py  session.py  setup.py
app/migrations/: env.py
app/migrations/versions/: 0d4070980edb_outpass_rejection_jsonb_column.py  394be623d8ed_migration_message.py  3a057a48c5c2_migration_message.py  3e31d55de436_warden_id_compulsory_in_outpass.py  92796691db2b_outpass_out_time.py  980626dfe77c_models.py  a7b172698579_guardian_phone_number.py  dc6452a56645_verification_code_table.py  dde67db9ca3c_outpass_datetime.py  de9de7fa3192_relations.py  (+1 more)
app/models/: __init__.py  auth_user.py  guardian.py  outpass.py  student_details.py  verification_code.py
app/schema/: __init__.py  auth_user.py  generic.py  guardian.py  outpass.py  verification_code.py
app/services/: __init__.py  twilio.py
docs/auth/: auth.md
docs/routes/: auth_user.md  guardian.md  outpass.md
script/: seed_db.py
script/railway/: railway.sql
(+8 files in other folders)
